--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=movie_db
 DB_USERNAME=root
-DB_PASSWORD=wellsettled
+DB_PASSWORD=root
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
